<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.5"
    android:background="@drawable/screens_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:orientation="vertical"
        android:padding="40dp"
        android:textAlignment="center" >

        <EditText
            android:id="@+id/device_name"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_name" />
        
        <View
        android:layout_width="fill_parent"
        android:layout_height="20dp" />
        
        <EditText
            android:id="@+id/ssid"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text="@string/network_name" />
        
        <EditText
            android:id="@+id/ssid_password"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text="@string/network_password" />
        
    </LinearLayout>

    <LinearLayout                      
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/add_device_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:text="@string/save"
            android:textStyle="bold" />

        <View
            android:id="@+id/vertical_separator"
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/cancel"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>