<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screens_background"
    android:alpha="0.50"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        android:textAlignment="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:gravity="center_horizontal"
            android:text="@string/no_device_added"
            android:textColor="#ffffff"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/goto_add_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/add_device"
            android:textStyle="bold" />

        <View
            android:id="@+id/vertical_separator"
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:text="@string/log_out"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>