<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screens_background"
    android:orientation="vertical" >

     <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        android:textAlignment="center" >

        <EditText
            android:id="@+id/rename_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/custom_table_row"
            android:inputType="text"
            style="@style/editTextStyle"
            android:hint="@string/name" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
         android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/rename_device_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:text="@string/save"
            android:textStyle="bold" />

        <View
            android:id="@+id/vertical_separator"
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/rename_device_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/cancel"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>