<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="260dp"
        android:layout_height="120dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="60dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/basil_logo" />

    <TableLayout
        android:id="@+id/textwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:background="@drawable/rectangle_curved_corners_layout" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" >

            <EditText
                android:id="@+id/username"
                style="@style/text_style_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:hint="@string/username" >

                <requestFocus />
            </EditText>
        </TableRow>

        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="3dip"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="#B1BEBC" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/password"
                style="@style/text_style_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:ems="10"
                
                android:inputType="textPassword"
                android:hint="@string/password" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="28dp" >

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:background="@drawable/button_style"
            
            android:text="@string/sign_in" />

        <View
            android:id="@+id/horizontal_separator"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:background="@drawable/button_style"
            android:text="@string/sign_up" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<!--     <LinearLayout -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:gravity="center" > -->

<!--         <ImageView -->
<!--             android:id="@+id/imageView2" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:src="@drawable/twitter_icon" /> -->

<!--         <ImageView -->
<!--             android:id="@+id/imageView3" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:src="@drawable/facebook_icon" /> -->

<!--         <ImageView -->
<!--             android:id="@+id/imageView4" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:src="@drawable/gmail_icon" /> -->

<!--     </LinearLayout> -->

   <!--  <fragment
        android:id="@+id/fragment1"
        android:name="com.example.basilapp1.FBTwGmailLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:layout="@layout/fbtwgmail_login_option"/> -->

</LinearLayout>